TestSuite/PascalABCTests/errors/err0025.pas
procedure Test;
begin
end;

function Func2(a : integer) : integer;
begin
end;

function Func2(var a : integer) : integer;
begin
end;

const cnst1 = 23;
      
var a : integer;
    s : string;
    arr : array[1..3] of integer;
    set1 : set of byte;
    
begin
 foreach ch:real in arr do;
end.